# adam

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.orig  README.md  fix_inspector.py  make-pi-sysroot.sh  orig_code.txt  original_inspector.cpp  temp.cpp
applications/adam/: CMakeLists.txt
applications/adam-cli/: CMakeLists.txt
applications/adam-cli/source/: cli-settings.cpp  cli-settings.hpp  cli-strings.cpp  cli-strings.hpp  command-database.cpp  command-database.hpp  default-commands.cpp  default-commands.hpp  main.cpp  terminal-manager.cpp  terminal-manager.hpp
applications/adam-cli/test/: main.cpp
applications/adam-cmd/: CMakeLists.txt
applications/adam-cmd/source/: cmd-strings.cpp  cmd-strings.hpp  command-database.hpp  default-commands.cpp  default-commands.hpp  main.cpp
applications/adam-gui/: CMakeLists.txt
applications/adam-gui/source/: gui-controller.cpp  gui-controller.hpp  main-window.cpp  main-window.hpp  main.cpp  setup.cpp  setup.hpp
applications/adam-gui/source/main-window/: gui-strings.cpp  gui-strings.hpp  main-window.cpp  main-window.hpp  tab-configuration.cpp  tab-configuration.hpp  tab-information.cpp  tab-information.hpp  tab-management.cpp  tab-management.hpp  tab-modules.cpp  tab-modules.hpp
applications/adam/source/: main.cpp
modules/asterix/: CMakeLists.txt
modules/asterix/include/: adam-module-asterix.hpp
modules/asterix/include/api/: api-asterix.hpp  api.hpp
modules/asterix/include/data/: asterix-analyzer.hpp  asterix-encoder.hpp  asterix-internal.hpp  asterix-parser.hpp  asterix-types.hpp  asterix-uap.hpp  data-format-asterix.hpp  format-asterix.hpp
modules/asterix/include/module/: module-asterix.hpp  module.hpp
modules/asterix/source/data/: asterix-analyzer.cpp  asterix-encoder.cpp  asterix-parser.cpp  asterix-types.cpp  asterix-uap.cpp  format-asterix.cpp
modules/asterix/source/module/: module-asterix.cpp  module.cpp
modules/asterix/test/: test-asterix-encoder.cpp  test-asterix-internal.cpp  test-asterix-parser.cpp  test-messages.hpp
modules/can/: CMakeLists.txt
modules/can/include/: adam-module-can.hpp
modules/can/include/api/: api-can.hpp  api.hpp
modules/can/include/data/: can-analyzer.hpp  can-types.hpp  data-format-can.hpp  format-can.hpp
modules/can/include/module/: module-can.hpp  module.hpp
modules/can/source/data/: can-analyzer.cpp  format-can.cpp
modules/can/source/module/: module-can.cpp  module.cpp
modules/recrep/: CMakeLists.txt
modules/recrep/include/: adam-recrep.hpp
modules/recrep/include/api/: api-recrep.hpp  api.hpp  recrep-api.hpp
modules/recrep/include/module/: module-recrep.hpp  module.hpp
modules/recrep/source/module/: module-recrep.cpp  module.cpp
modules/recrep/test/: test-port-recording.cpp  test-port-replay.cpp
modules/serial/: CMakeLists.txt
modules/serial/include/api/: api-serial.hpp
modules/serial/include/module/: module-serial.hpp  module.hpp
modules/serial/source/module/: module-serial.cpp  module.cpp
modules/serial/source/port/: port-serial.cpp
modules/serial/source/port-types/: port-serial.cpp
modules/tcp/: CMakeLists.txt
sdk/: CMakeLists.txt
sdk/include/: adam-sdk.hpp
sdk/include/api/: api-sdk.hpp  api.hpp  sdk-api.hpp
sdk/include/commander/: command.hpp  commander-event-dispatcher.hpp  commander.hpp  config-view.hpp  module-view.hpp  registry-view.hpp
sdk/include/configuration/: configuration-item.hpp
sdk/include/controller/: controller-cmd-dispatcher.hpp  controller-extern.hpp  controller-module-manager.hpp  controller.hpp  registry-configuration-manager.hpp  registry-module-manager.hpp  registry.hpp  response.hpp
sdk/include/data/: analyzer.hpp  connection.hpp  encoder.hpp  format.hpp  inspector.hpp  parser.hpp  port.hpp  processor.hpp  registry-item.hpp
sdk/include/factory/: factory.hpp
sdk/include/hash/: rapidhash-ct.h
sdk/include/logger/: log.hpp  logger-sink.hpp  logger.hpp
sdk/include/memory/: memory-signaled.hpp  memory.hpp
sdk/include/module/: module-internal.hpp  module.hpp
sdk/include/os/: os.hpp
sdk/include/port/: port.hpp
sdk/include/queue/: queue-shared-duplex.hpp  queue-shared.hpp
sdk/include/resources/: language-strings.hpp  language.hpp
sdk/include/string/: string-hashed-ct.hpp  string-hashed.hpp
sdk/include/types/: byteswap.hpp  enum-bit-operations.hpp  map-double-buffer.hpp  queue-shared-duplex.hpp  queue-shared.hpp  string-hashed-ct.hpp  string-hashed.hpp  vector-double-buffer.hpp
sdk/include/version/: version.hpp
sdk/source/commander/: commander-event-dispatcher.cpp  commander.cpp  module-view.cpp
sdk/source/configuration/: configuration-item.cpp
sdk/source/controller/: controller-cmd-dispatcher.cpp  controller-command-internal-structs.hpp  controller-extern.cpp  controller-module-manager.cpp  controller.cpp  registry-configuration-manager.cpp  registry-module-manager.cpp  registry.cpp
sdk/source/data/: analyzer.cpp  connection.cpp  format.cpp  inspector.cpp  processor.cpp
sdk/source/logger/: log.cpp  logger-sink.cpp  logger.cpp
sdk/source/memory/: memory-shared.cpp  memory-signaled.cpp  memory.cpp
sdk/source/module/: module-internal.cpp  module.cpp
sdk/source/os/: os.cpp
sdk/source/port/: port.cpp
sdk/source/resources/: language-strings.cpp
sdk/source/string/: string-hashed.cpp
sdk/source/types/: string-hashed.cpp
sdk/test/commander/: test-commander-inspector.cpp  test-commander.cpp  test-module-view.cpp
sdk/test/controller/: test-controller-cmd-dispatcher.cpp  test-controller-module-manager.cpp  test-controller.cpp  test-registry-module-manager.cpp  test-registry.cpp
sdk/test/data/: test-connection.cpp  test-data-format.cpp
sdk/test/logger/: test-logger-sink.cpp  test-logger.cpp
sdk/test/memory/: test-memory-signal.cpp  test-memory.cpp
sdk/test/queue/: test-queue-shared-duplex.cpp  test-queue-shared.cpp
sdk/test/string/: test-string-hashed-ct.cpp  test-string-hashed.cpp
sdk/test/types/: test-map-double-buffer.cpp  test-queue-shared.cpp  test-string-hashed-ct.cpp  test-string-hashed.cpp
(+239 files in other folders)
